--- a/package.json
+++ b/package.json
@@ -26,9 +26,11 @@
   },
   "dependencies": {
     "expo": "^27.0.1",
+    "moment": "^2.22.2",
     "prop-types": "^15.6.1",
     "react": "16.3.1",
     "react-native": "~0.55.2",
+    "react-native-elements": "^0.19.1",
     "styled-components": "^3.3.2"
   }
 }
