--- a/package.json
+++ b/package.json
@@ -25,12 +25,15 @@
     "preset": "jest-expo"
   },
   "dependencies": {
+    "base-64": "^0.1.0",
     "expo": "^27.0.1",
     "moment": "^2.22.2",
     "prop-types": "^15.6.1",
     "react": "16.3.1",
     "react-native": "~0.55.2",
     "react-native-elements": "^0.19.1",
+    "react-native-vector-icons": "^4.6.0",
+    "react-navigation": "^2.2.5",
     "styled-components": "^3.3.2"
   }
 }
