--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "react-native-elements": "^0.19.1",
     "react-native-vector-icons": "^4.6.0",
     "react-navigation": "^2.3.0",
+    "rn-pdf-reader-js": "^0.1.7",
     "styled-components": "^3.3.2",
     "yup": "^0.25.1"
   }
