--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "preset": "jest-expo"
   },
   "dependencies": {
+    "@expo/vector-icons": "^6.3.1",
     "base-64": "^0.1.0",
     "expo": "^27.0.1",
     "moment": "^2.22.2",
