--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "react": "16.3.1",
     "react-native": "~0.55.2",
     "react-native-elements": "^0.19.1",
+    "react-native-loading-spinner-overlay": "^0.5.2",
     "react-native-vector-icons": "^4.6.0",
     "react-navigation": "^2.3.0",
     "rn-pdf-reader-js": "^0.1.7",
