--- a/package.json
+++ b/package.json
@@ -32,7 +32,7 @@
     "prop-types": "^15.6.1",
     "react": "16.3.1",
     "react-native": "~0.55.2",
-    "react-native-elements": "^0.19.1",
+    "react-native-elements": "^1.0.0-beta5",
     "react-native-loading-spinner-overlay": "^0.5.2",
     "react-native-vector-icons": "^4.6.0",
     "react-navigation": "^2.3.0",
