--- a/package.json
+++ b/package.json
@@ -37,6 +37,8 @@
     "react-native-vector-icons": "^4.6.0",
     "react-navigation": "^2.3.0",
     "react-navigation-tabs": "^0.6.0",
+    "react-redux": "^5.0.7",
+    "redux": "^4.0.0",
     "rn-pdf-reader-js": "^0.1.7",
     "styled-components": "^3.3.2",
     "yup": "^0.25.1"
