--- a/app.json
+++ b/app.json
@@ -5,12 +5,16 @@
     "slug": "psa-nz-app",
     "icon": "./assets/img/icon.png",
     "description": "Members App",
-    "version": "0.0.4",
+    "version": "2.0.0",
     "ios": {
       "bundleIdentifier": "com.redstubble.PSANZ"
     },
     "android": {
-      "package": "com.redstubble.PSANZ"
+      "package": "com.ionicframework.psapp180051",
+      "versionCode": 3,
+      "permissions": [
+        "CAMERA"
+      ]
     },
     "splash": {
       "image": "./assets/img/splash.png",
