--- a/package.json
+++ b/package.json
@@ -39,7 +39,7 @@
     "react-navigation-tabs": "^0.6.0",
     "react-redux": "^5.0.7",
     "redux": "^4.0.0",
-    "rn-pdf-reader-js": "^0.2.0",
+    "rn-pdf-reader-js": "Codeko/rn-pdf-reader-js#v0.2.2",
     "styled-components": "^3.3.2",
     "yup": "^0.25.1"
   }
